--- a/public/style.css
+++ b/public/style.css
@@ -1,12 +1,10 @@
 /****** Main Styling ******/
 
 body {
-	font-family: 'Roboto', sans-serif;
-	font-size: 16px;
-	color: #222;
-	background-color: #FaFaFa;
-	text-align: center;
-	line-height: 1.4em;
+	margin: 0;
+  padding: 0;
+  text-align: center;
+  font-family: Tahoma, sans-serif;
 }
 
 .container {
