--- a/views/index.html
+++ b/views/index.html
@@ -2,15 +2,12 @@
 
 <html>
    <head>
-      <title>Timestamp Microservice | freeCodeCamp.org</title>
-      <link rel="shortcut icon" href="https://cdn.freecodecamp.org/universal/favicons/favicon-32x32.png" type="image/x-icon"/>
-      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
+      <title>Timestamp Microservice</title>
       <link href="style.css" rel="stylesheet" type="text/css">
    </head>
 
    <body>
     <h1>Timestamp Microservice</h1>
-    <hr />
     <div class="container">
       <h3>Example Usage:</h3>
       <ul>
@@ -25,7 +22,7 @@
     </div>
     <div class="footer">
       <p>
-        By <a href="https://www.freecodecamp.org/">freeCodeCamp.org</a>
+        By <a href="https://8krism.github.io/">8KrisM</a>
       </p>
     </div>
   </body>
